back resume button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
               <ion-icon name="logo-github" class="social"></ion-icon
             ></a>
           </div>
+          <div class="d-grid gap-2 col-6 mx-auto mt-3">
+            <button type="button" class="btn btn-lg btn-outline-primary">
+              View Resume
+            </button>
+          </div>
         </div>
       </div>
     </div>
