--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           />
         </div>
         <div
-          class="col d-flex flex-column align-items-start justify-content-center d-grid gap-2"
+          class="col d-flex flex-column align-items-start justify-content-center"
         >
           <h1 id="name" class="ps-5"></h1>
           <h3 id="position" class="ps-5"></h3>
