--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/responsive.css" />
+
     <link rel="stylesheet" href="./styles/fonts.css" />
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col d-flex align-items-center justify-content-center">
+        <div class="col d-flex align-items-center justify-content-center left">
           <img
             src="./assets/img/IMG_20220808_124307-removebg-preview.png"
             class="card image"
+            data-aos="fade-up"
+            data-aos-delay="10"
           />
         </div>
         <div
-          class="col d-flex flex-column align-items-start justify-content-center"
+          class="col d-flex flex-column align-items-start justify-content-center right"
         >
           <h1 id="name" class="ps-5"></h1>
           <h3 id="position" class="ps-5"></h3>
@@ -45,7 +49,11 @@
               <ion-icon name="logo-github" class="social"></ion-icon
             ></a>
           </div>
-          <div class="d-grid gap-2 col-6 mx-auto mt-3">
+          <div
+            class="d-grid gap-2 col-6 mx-auto mt-3"
+            data-aos="fade-up"
+            data-aos-delay="1500"
+          >
             <button type="button" class="btn btn-lg btn-outline-primary">
               View Resume
             </button>
